--- a/index.html
+++ b/index.html
@@ -692,5 +692,6 @@
         }
 
     </script>
+    <script defer src="https://fx.baoge.wang/tracker.min.js" data-website-id="书签管理器"></script>
 </body>
 </html>
